--- a/style.css
+++ b/style.css
@@ -1,35 +1,79 @@
 header { 
+    background-color: #1F2937;
     font-size: 50px;
-justify-content: center;}
+    font-display: center;
+    margin: auto;
+    padding: 1px;}
+
 
 
 .alien1 {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 10%;
-}
+    block-size: 100px;
+    position: absolute;
+    top: 100px;
+    right: 400px;}
 
 
 .row .alien2 {
     display: inline-block;
-
-    margin-left: 10%;
+    margin-left: auto;
     margin-right: auto;
-    width: 10%;
+    width: 100%;}
+
+.names {
+    display: block;
+    color: whitesmoke;
 }
 
-.one {background-color: #ffe4dc;
-color: black;}
+.one {
+    background-color: #ffe4dc;
+    margin: auto;
+    padding: 1px;
+    color: black;
+}
 
-.two {background-color: orange;
+.two {
+    color: white;
+    background-color: #1F2937;
+    margin: auto;
+    padding: 1px;
     flex-direction: row;}
 
-.three {background-color: orangered;}
+.three {
+    background-color: #E5E7Eb;
+     margin: auto;
+    padding: 1px}
 
-.four {background-color: orange;}
+.four {
+    background-color: #fff7e9;
+    margin: auto;
+    padding: 100px}
 
-footer {color: black;
-background-color: #ffe4dc;
-align-content: center;
-justify-content: flex-end;}
+.box {background-color: #3882F6;
+    text-align: center;
+    text-transform: uppercase;
+    width: 400px; 
+    height: 70px; 
+    border-radius: 8px; 
+    margin: auto;
+    padding: 1px}
+
+.four .box {
+    display: block;
+    position: center;}
+
+.button {
+    font-size: 15px;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    border: 2px solid #000000;
+    margin-top: 10px;}
+
+footer {
+    color: whitesmoke;
+    background-color: #1F2937;
+    align-content: center;
+    justify-content: flex-end;
+    margin: auto;
+    padding: 1px}
